Need to rework Pep.java dealing with webServerUrl parsing.